// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules | LinkBuy LinkBuy 1`] = `
<a
  className="Link__StyledLink-apj04t-0 ixkkIR LinkBuy__StyledLink-sc-1qysrjt-0 jytFJk"
  href="/somewhere"
  onClick={[Function]}
>
  <span
    className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 koEYRB"
  >
    Buy
  </span>
</a>
`;

exports[`Storyshots Molecules | LinkBuy LinkBuy disabled 1`] = `
<span
  className="LinkBuy__StyledLink-sc-1qysrjt-0 fMFZOI"
  disabled={true}
>
  <span
    className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 koEYRB"
  >
    Buy
  </span>
</span>
`;

exports[`Storyshots Molecules | LinkBuy LinkBuy with rel as nofollow 1`] = `
<a
  className="Link__StyledLink-apj04t-0 ixkkIR LinkBuy__StyledLink-sc-1qysrjt-0 jytFJk"
  href="/somewhere"
  onClick={[Function]}
  rel="nofollow"
>
  <span
    className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 koEYRB"
  >
    Buy
  </span>
</a>
`;
